src/objects/Tabelle_di_Sistema__c.object
<CustomObject>
    <fields>
        <fullName>Causale__c</fullName>
        <label>Causale</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chiave_Codice_Sconto_ETL__c</fullName>
        <formula>Causale__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Chiave Codice Sconto ETL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chiave_Record__c</fullName>
        <externalId>true</externalId>
        <label>Chiave Record</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Codice__c</fullName>
        <label>Codice</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Fine__c</fullName>
        <label>Data Fine</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_Inizio__c</fullName>
        <label>Data Inizio</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Descrizione_ENG__c</fullName>
        <label>Descrizione ENG</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Descrizione__c</fullName>
        <label>Descrizione</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Motivazioni_di_reso__c</fullName>
        <label>Motivazioni di reso</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>La taglia del prodotto non corrisponde alle aspettative</fullName>
                </value>
                <value>
                    <fullName>Il prodotto ricevuto è diverso da quello ordinato</fullName>
                </value>
                <value>
                    <fullName>Il colore non corrisponde alle aspettative</fullName>
                </value>
                <value>
                    <fullName>Il modello non corrisponde alle aspettative</fullName>
                </value>
                <value>
                    <fullName>Il tessuto non corrisponde alle aspettative</fullName>
                </value>
                <value>
                    <fullName>Prodotto difettoso</fullName>
                </value>
                <value>
                    <fullName>La consegna è avvenuta in ritardo</fullName>
                </value>
                <value>
                    <fullName>Sto rendendo un regalo</fullName>
                </value>
                <value>
                    <fullName>Non voglio fornire alcuna motivazione</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Numero_Stagione__c</fullName>
        <label>Numero Stagione</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ordine_Stagione__c</fullName>
        <label>Ordine Stagione</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Stagione Attuale</fullName>
                </value>
                <value>
                    <fullName>Stagione Precedente</fullName>
                </value>
                <value>
                    <fullName>Due Stagioni Precedenti</fullName>
                </value>
                <value>
                    <fullName>Tre Stagioni Precedenti</fullName>
                </value>
                <value>
                    <fullName>Quattro Stagioni Precedenti</fullName>
                </value>
                <value>
                    <fullName>Cinque Stagioni Precedenti</fullName>
                </value>
                <value>
                    <fullName>Sei Stagioni Precedenti</fullName>
                </value>
                <value>
                    <fullName>Sette Stagioni Precedenti</fullName>
                </value>
                <value>
                    <fullName>Otto Stagioni Precedenti</fullName>
                </value>
                <value>
                    <fullName>Nove Stagioni Precedenti</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Tabella di Sistema</label>
    <listViews>
        <fullName>All</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>Causale__c</columns>
        <columns>Codice__c</columns>
        <columns>Descrizione__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Causali_Sconto</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>Causale__c</columns>
        <columns>Codice__c</columns>
        <columns>Descrizione__c</columns>
        <columns>Chiave_Record__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Tabelle_di_Sistema__c.Causali_Sconto</value>
        </filters>
        <label>Causali Sconto</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Motivazioni_Reso</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>Codice__c</columns>
        <columns>Motivazioni_di_reso__c</columns>
        <columns>Chiave_Record__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Tabelle_di_Sistema__c.Motivazioni_Reso</value>
        </filters>
        <label>Motivazioni Reso</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Stagioni</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>Ordine_Stagione__c</columns>
        <columns>Numero_Stagione__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Tabelle_di_Sistema__c.Stagioni_Prodotti</value>
        </filters>
        <label>Stagioni Prodotti</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>S-{0000}</displayFormat>
        <label>Tabella di Sistems Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tabelle di Sistema</pluralLabel>
    <recordTypes>
        <fullName>Causali_Sconto</fullName>
        <active>true</active>
        <label>Causali Sconto</label>
    </recordTypes>
    <recordTypes>
        <fullName>Motivazioni_Reso</fullName>
        <active>true</active>
        <label>Motivazioni Reso</label>
    </recordTypes>
    <recordTypes>
        <fullName>Stagioni_Prodotti</fullName>
        <active>true</active>
        <label>Stagioni Prodotti</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>